@@ -11885,6 +11885,9 @@ components of the \typ{VECSMALL} \kbd{x} and return a permutation stored in a
 
 \fun{void}{vecsmall_sort}{GEN v} sorts the \typ{VECSMALL} \kbd{v} in place.
 
+\fun{void}{vecsmall_reverse}{GEN v} as \kbd{vecreverse} for a \typ{VECSMALL}
+\kbd{v}.
+
 \fun{long}{vecsmall_max}{GEN v} returns the maximum of the elements of
 \typ{VECSMALL} \kbd{v}, assumed non-empty.
 
