@@ -473,6 +473,7 @@ BA 177- libpari support for low-res plot()
 BA 183- GP function ellsea
    183- [libpari] nfsub, Rg_RgC_sub, Rg_RgC_sub, Z_ZC_sub
    184- [libpari] zkchinese, zkchinese1, zkchineseinit
+   185- [libpari] vecsmall_reverse
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
